--- a/Chat-App/package.json
+++ b/Chat-App/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "chat-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "mongodb": "^5.6.0",
-    "mongoose": "^7.2.2",
-    "socket.io": "^4.4.1"
-  }
+    "name": "chat-app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cookie-parser": "^1.4.6",
+        "ejs": "^3.1.6",
+        "express": "^4.17.1",
+        "mongodb": "^5.6.0",
+        "mongoose": "^7.2.2",
+        "morgan": "^1.10.0",
+        "socket.io": "^4.4.1"
+    }
 }
